捐赠合约接口
